prior to csrf security  fixture

--- a/templates/structure/structure_service_update.html.twig
+++ b/templates/structure/structure_service_update.html.twig
@@ -7,6 +7,11 @@
         <h1>Edition des services de {{ structure.address }}</h1>
     </div>
 
+    <div class="my-3 p-3 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+{#        {{ dump(partner) }}#}
+{#        {{ dump(service_from_partner) }}#}
+    </div>
+
     {{ form_start(structureServiceUpdateForm) }}
 
 
