--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -31,12 +31,11 @@
                 <label for="password" class="label-login">Password :</label>
                 <input type="password" id="password" name="_password" class="form-control form-control-lg"/>
             </div>
-{#            <div class="my-5 p-3 col-md-6 offset-md-3 col-lg-4 offset-lg-4" >#}
-{#            <div class="my-5 p-3 col-6 offset-3 " >#}
-{#                <button type="submit" class=" btn-lg btn-submit">Go ! Je me connecte !</button>#}
-{#            </div>#}
 
-{#            test button neon#}
+            {# CSRF counter measure#}
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+
             <div class="my-5 p-3 col-6 offset-3 " >
 
                 <button  id="neon" type="submit">
@@ -49,7 +48,6 @@
             </div>
 
 
-{#            end test button neon#}
 
         </form>
     </div>
